--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   <div class="reveal">
     <div class="slides">
 
-<section id="title-slide" data-background-image="/img/bebe3.png" data-background-opacity="0.6" data-background-size="contain" class="quarto-title-block center">
+<section id="title-slide" data-background-image="/img/bebe2.jpg" data-background-opacity="0.6" data-background-size="contain" class="quarto-title-block center">
   <h1 class="title">Funciones evolutivas del habla dirigida a bebés</h1>
   <p class="subtitle">Impacto en la atención, las preferencias auditivas y el desarrollo lingüístico y musical temprano</p>
 
@@ -410,11 +410,8 @@ Convocatoria Interna - Investigación Avanzada · 2025
 </section>
 <section id="ética" class="slide level2 center" data-auto-animate="true">
 <h2 data-id="quarto-animate-title">Ética</h2>
-</section>
-<section id="ética-1" class="slide level2 center" data-auto-animate="true">
-<h2 data-id="quarto-animate-title">Ética</h2>
 <ul>
-<li><strong>Estudio 1</strong> ya obtuvo aprobación ética (código CIE 2023-059). Sólo cambia <em>n</em>.</li>
+<li><strong>Estudio 1</strong> ya obtuvo aprobación ética (CIE 2023-059). Sólo cambia <em>n</em>.</li>
 </ul>
 <div class="fragment fade-in">
 <ul>
@@ -422,7 +419,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
 </ul>
 </div>
 </section>
-<section id="ética-2" class="slide level2 center" data-auto-animate="true">
+<section id="ética-1" class="slide level2 center" data-auto-animate="true">
 <h2 data-id="quarto-animate-title">Ética</h2>
 <ul>
 <li><strong>Estudio 2</strong> sin riesgo.</li>
@@ -433,28 +430,25 @@ Convocatoria Interna - Investigación Avanzada · 2025
 </section>
 <section id="equipo" class="slide level2 center" data-auto-animate="true">
 <h2 data-id="quarto-animate-title">Equipo</h2>
-</section>
-<section id="equipo-1" class="slide level2 center" data-auto-animate="true">
-<h2 data-id="quarto-animate-title">Equipo</h2>
 <div class="cell">
 <div class="cell-output-display">
-<div id="cshgwttvwg" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
-<style>#cshgwttvwg table {
+<div id="ftdxiydrlk" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<style>#ftdxiydrlk table {
   font-family: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-#cshgwttvwg thead, #cshgwttvwg tbody, #cshgwttvwg tfoot, #cshgwttvwg tr, #cshgwttvwg td, #cshgwttvwg th {
+#ftdxiydrlk thead, #ftdxiydrlk tbody, #ftdxiydrlk tfoot, #ftdxiydrlk tr, #ftdxiydrlk td, #ftdxiydrlk th {
   border-style: none;
 }
 
-#cshgwttvwg p {
+#ftdxiydrlk p {
   margin: 0;
   padding: 0;
 }
 
-#cshgwttvwg .gt_table {
+#ftdxiydrlk .gt_table {
   display: table;
   border-collapse: collapse;
   line-height: normal;
@@ -480,12 +474,12 @@ Convocatoria Interna - Investigación Avanzada · 2025
   border-left-color: #D3D3D3;
 }
 
-#cshgwttvwg .gt_caption {
+#ftdxiydrlk .gt_caption {
   padding-top: 4px;
   padding-bottom: 4px;
 }
 
-#cshgwttvwg .gt_title {
+#ftdxiydrlk .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -497,7 +491,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   border-bottom-width: 0;
 }
 
-#cshgwttvwg .gt_subtitle {
+#ftdxiydrlk .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -509,7 +503,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   border-top-width: 0;
 }
 
-#cshgwttvwg .gt_heading {
+#ftdxiydrlk .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -521,13 +515,13 @@ Convocatoria Interna - Investigación Avanzada · 2025
   border-right-color: #D3D3D3;
 }
 
-#cshgwttvwg .gt_bottom_border {
+#ftdxiydrlk .gt_bottom_border {
   border-bottom-style: none;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#cshgwttvwg .gt_col_headings {
+#ftdxiydrlk .gt_col_headings {
   border-top-style: none;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -542,7 +536,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   border-right-color: #D3D3D3;
 }
 
-#cshgwttvwg .gt_col_heading {
+#ftdxiydrlk .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 13px;
@@ -562,7 +556,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   overflow-x: hidden;
 }
 
-#cshgwttvwg .gt_column_spanner_outer {
+#ftdxiydrlk .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 13px;
@@ -574,15 +568,15 @@ Convocatoria Interna - Investigación Avanzada · 2025
   padding-right: 4px;
 }
 
-#cshgwttvwg .gt_column_spanner_outer:first-child {
+#ftdxiydrlk .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#cshgwttvwg .gt_column_spanner_outer:last-child {
+#ftdxiydrlk .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#cshgwttvwg .gt_column_spanner {
+#ftdxiydrlk .gt_column_spanner {
   border-bottom-style: none;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -594,11 +588,11 @@ Convocatoria Interna - Investigación Avanzada · 2025
   width: 100%;
 }
 
-#cshgwttvwg .gt_spanner_row {
+#ftdxiydrlk .gt_spanner_row {
   border-bottom-style: hidden;
 }
 
-#cshgwttvwg .gt_group_heading {
+#ftdxiydrlk .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -624,7 +618,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   text-align: left;
 }
 
-#cshgwttvwg .gt_empty_group_heading {
+#ftdxiydrlk .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -639,15 +633,15 @@ Convocatoria Interna - Investigación Avanzada · 2025
   vertical-align: middle;
 }
 
-#cshgwttvwg .gt_from_md > :first-child {
+#ftdxiydrlk .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#cshgwttvwg .gt_from_md > :last-child {
+#ftdxiydrlk .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#cshgwttvwg .gt_row {
+#ftdxiydrlk .gt_row {
   padding-top: 2px;
   padding-bottom: 2px;
   padding-left: 5px;
@@ -666,7 +660,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   overflow-x: hidden;
 }
 
-#cshgwttvwg .gt_stub {
+#ftdxiydrlk .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -679,7 +673,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   padding-right: 5px;
 }
 
-#cshgwttvwg .gt_stub_row_group {
+#ftdxiydrlk .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -693,15 +687,15 @@ Convocatoria Interna - Investigación Avanzada · 2025
   vertical-align: top;
 }
 
-#cshgwttvwg .gt_row_group_first td {
+#ftdxiydrlk .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#cshgwttvwg .gt_row_group_first th {
+#ftdxiydrlk .gt_row_group_first th {
   border-top-width: 2px;
 }
 
-#cshgwttvwg .gt_summary_row {
+#ftdxiydrlk .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -711,16 +705,16 @@ Convocatoria Interna - Investigación Avanzada · 2025
   padding-right: 5px;
 }
 
-#cshgwttvwg .gt_first_summary_row {
+#ftdxiydrlk .gt_first_summary_row {
   border-top-style: none;
   border-top-color: #D3D3D3;
 }
 
-#cshgwttvwg .gt_first_summary_row.thick {
+#ftdxiydrlk .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#cshgwttvwg .gt_last_summary_row {
+#ftdxiydrlk .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -730,7 +724,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   border-bottom-color: #D3D3D3;
 }
 
-#cshgwttvwg .gt_grand_summary_row {
+#ftdxiydrlk .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -740,7 +734,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   padding-right: 5px;
 }
 
-#cshgwttvwg .gt_first_grand_summary_row {
+#ftdxiydrlk .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -750,7 +744,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   border-top-color: #D3D3D3;
 }
 
-#cshgwttvwg .gt_last_grand_summary_row_top {
+#ftdxiydrlk .gt_last_grand_summary_row_top {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -760,11 +754,11 @@ Convocatoria Interna - Investigación Avanzada · 2025
   border-bottom-color: #D3D3D3;
 }
 
-#cshgwttvwg .gt_striped {
+#ftdxiydrlk .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#cshgwttvwg .gt_table_body {
+#ftdxiydrlk .gt_table_body {
   border-top-style: none;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -773,7 +767,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   border-bottom-color: #D3D3D3;
 }
 
-#cshgwttvwg .gt_footnotes {
+#ftdxiydrlk .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -787,7 +781,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   border-right-color: #D3D3D3;
 }
 
-#cshgwttvwg .gt_footnote {
+#ftdxiydrlk .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-top: 4px;
@@ -796,7 +790,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   padding-right: 5px;
 }
 
-#cshgwttvwg .gt_sourcenotes {
+#ftdxiydrlk .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -810,7 +804,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   border-right-color: #D3D3D3;
 }
 
-#cshgwttvwg .gt_sourcenote {
+#ftdxiydrlk .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -818,72 +812,72 @@ Convocatoria Interna - Investigación Avanzada · 2025
   padding-right: 5px;
 }
 
-#cshgwttvwg .gt_left {
+#ftdxiydrlk .gt_left {
   text-align: left;
 }
 
-#cshgwttvwg .gt_center {
+#ftdxiydrlk .gt_center {
   text-align: center;
 }
 
-#cshgwttvwg .gt_right {
+#ftdxiydrlk .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#cshgwttvwg .gt_font_normal {
+#ftdxiydrlk .gt_font_normal {
   font-weight: normal;
 }
 
-#cshgwttvwg .gt_font_bold {
+#ftdxiydrlk .gt_font_bold {
   font-weight: bold;
 }
 
-#cshgwttvwg .gt_font_italic {
+#ftdxiydrlk .gt_font_italic {
   font-style: italic;
 }
 
-#cshgwttvwg .gt_super {
+#ftdxiydrlk .gt_super {
   font-size: 65%;
 }
 
-#cshgwttvwg .gt_footnote_marks {
+#ftdxiydrlk .gt_footnote_marks {
   font-size: 75%;
   vertical-align: 0.4em;
   position: initial;
 }
 
-#cshgwttvwg .gt_asterisk {
+#ftdxiydrlk .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#cshgwttvwg .gt_indent_1 {
+#ftdxiydrlk .gt_indent_1 {
   text-indent: 5px;
 }
 
-#cshgwttvwg .gt_indent_2 {
+#ftdxiydrlk .gt_indent_2 {
   text-indent: 10px;
 }
 
-#cshgwttvwg .gt_indent_3 {
+#ftdxiydrlk .gt_indent_3 {
   text-indent: 15px;
 }
 
-#cshgwttvwg .gt_indent_4 {
+#ftdxiydrlk .gt_indent_4 {
   text-indent: 20px;
 }
 
-#cshgwttvwg .gt_indent_5 {
+#ftdxiydrlk .gt_indent_5 {
   text-indent: 25px;
 }
 
-#cshgwttvwg .katex-display {
+#ftdxiydrlk .katex-display {
   display: inline-flex !important;
   margin-bottom: 0.75em !important;
 }
 
-#cshgwttvwg div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
+#ftdxiydrlk div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
   height: 0px !important;
 }
 </style>
@@ -991,16 +985,17 @@ Convocatoria Interna - Investigación Avanzada · 2025
 </ul>
 </div>
 </section>
-<section class="slide level2 center">
+<section id="gracias-por-escuchar" class="slide level2 center" data-auto-animate="true" data-autoslide="2000">
+<h2 data-id="quarto-animate-title">¡Gracias por escuchar!</h2>
 
-</section>
-<section id="gracias-por-escuchar" class="title-slide slide level1 center">
-<h1>¡Gracias por escuchar!</h1>
+<img data-src="img/logo_preview.svg" style="width:100.0%" class="r-stretch"></section>
+<section id="gracias-por-escuchar-1" class="slide level2 center" data-auto-animate="true">
+<h2 data-id="quarto-animate-title">¡Gracias por escuchar!</h2>
 <div class="columns">
-<div class="column" style="width:50%;">
+<div class="column" style="width:40%;">
 <p><img data-src="img/jdl_qr.svg" style="width:60.0%"></p>
-</div><div class="column" style="width:50%;">
-<p><br><br><br> <strong>Juan David Leongómez</strong> <span style="font-size: 50%;">PhD, MSc</span><br> <span style="font-size: 70%;"><a href="mailto:jleongomez@unbosque.edu.co">jleongomez@unbosque.edu.co</a></span><br></p>
+</div><div class="column" style="width:60%;">
+<p><strong>Juan David Leongómez</strong> <span style="font-size: 50%;">PhD, MSc</span><br> <span style="font-size: 70%;"><a href="mailto:jleongomez@unbosque.edu.co">jleongomez@unbosque.edu.co</a></span><br> <img data-src="img/logo_preview.svg" style="width:80.0%"></p>
 </div></div>
 
 </section>
