--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
 <iframe width="100%" height="480" src="https://www.youtube.com/embed/O8ETEajtfUs?start=11" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="">
 </iframe>
 </section>
-<section id="qué-nos-dice-una-voz" class="slide level2 center" data-auto-animate="true">
+<section id="qué-nos-dice-una-voz" class="slide level2 center" data-auto-animate="true" data-autoslide="1000">
 <h2 data-id="quarto-animate-title">¿Qué nos dice una voz?</h2>
 </section>
 <section id="qué-nos-dice-una-voz-1" class="slide level2 center" data-auto-animate="true">
@@ -175,7 +175,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
 <p>El <span style="color:#eb938a;">IDS</span> no solo es “ternura”. Es una herramienta poderosa de comunicación emocional, social y cognitiva.</p>
 </blockquote>
 </section>
-<section id="por-qué-importa-el-ids" class="slide level2 center" data-auto-animate="true">
+<section id="por-qué-importa-el-ids" class="slide level2 center" data-auto-animate="true" data-autoslide="1000">
 <h2 data-id="quarto-animate-title">¿Por qué importa el <span style="color:#eb938a;">IDS</span>?</h2>
 </section>
 <section id="por-qué-importa-el-ids-1" class="slide level2 center" data-auto-animate="true">
@@ -234,7 +234,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
 </div>
 <p><span style="font-size: 50%;"><a href="https://doi.org/10.1098/rstb.2020.0391">Leongómez et al., 2022</a></span></p>
 </section>
-<section id="este-proyecto" class="slide level2 center" data-auto-animate="true">
+<section id="este-proyecto" class="slide level2 center" data-auto-animate="true" data-autoslide="1000">
 <h2 data-id="quarto-animate-title">Este proyecto</h2>
 </section>
 <section id="este-proyecto-1" class="slide level2 center" data-auto-animate="true">
@@ -432,23 +432,23 @@ Convocatoria Interna - Investigación Avanzada · 2025
 <h2 data-id="quarto-animate-title">Equipo</h2>
 <div class="cell">
 <div class="cell-output-display">
-<div id="ftdxiydrlk" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
-<style>#ftdxiydrlk table {
+<div id="brcxiwflyq" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<style>#brcxiwflyq table {
   font-family: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-#ftdxiydrlk thead, #ftdxiydrlk tbody, #ftdxiydrlk tfoot, #ftdxiydrlk tr, #ftdxiydrlk td, #ftdxiydrlk th {
+#brcxiwflyq thead, #brcxiwflyq tbody, #brcxiwflyq tfoot, #brcxiwflyq tr, #brcxiwflyq td, #brcxiwflyq th {
   border-style: none;
 }
 
-#ftdxiydrlk p {
+#brcxiwflyq p {
   margin: 0;
   padding: 0;
 }
 
-#ftdxiydrlk .gt_table {
+#brcxiwflyq .gt_table {
   display: table;
   border-collapse: collapse;
   line-height: normal;
@@ -474,12 +474,12 @@ Convocatoria Interna - Investigación Avanzada · 2025
   border-left-color: #D3D3D3;
 }
 
-#ftdxiydrlk .gt_caption {
+#brcxiwflyq .gt_caption {
   padding-top: 4px;
   padding-bottom: 4px;
 }
 
-#ftdxiydrlk .gt_title {
+#brcxiwflyq .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -491,7 +491,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   border-bottom-width: 0;
 }
 
-#ftdxiydrlk .gt_subtitle {
+#brcxiwflyq .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -503,7 +503,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   border-top-width: 0;
 }
 
-#ftdxiydrlk .gt_heading {
+#brcxiwflyq .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -515,13 +515,13 @@ Convocatoria Interna - Investigación Avanzada · 2025
   border-right-color: #D3D3D3;
 }
 
-#ftdxiydrlk .gt_bottom_border {
+#brcxiwflyq .gt_bottom_border {
   border-bottom-style: none;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#ftdxiydrlk .gt_col_headings {
+#brcxiwflyq .gt_col_headings {
   border-top-style: none;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -536,7 +536,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   border-right-color: #D3D3D3;
 }
 
-#ftdxiydrlk .gt_col_heading {
+#brcxiwflyq .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 13px;
@@ -556,7 +556,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   overflow-x: hidden;
 }
 
-#ftdxiydrlk .gt_column_spanner_outer {
+#brcxiwflyq .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 13px;
@@ -568,15 +568,15 @@ Convocatoria Interna - Investigación Avanzada · 2025
   padding-right: 4px;
 }
 
-#ftdxiydrlk .gt_column_spanner_outer:first-child {
+#brcxiwflyq .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#ftdxiydrlk .gt_column_spanner_outer:last-child {
+#brcxiwflyq .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#ftdxiydrlk .gt_column_spanner {
+#brcxiwflyq .gt_column_spanner {
   border-bottom-style: none;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -588,11 +588,11 @@ Convocatoria Interna - Investigación Avanzada · 2025
   width: 100%;
 }
 
-#ftdxiydrlk .gt_spanner_row {
+#brcxiwflyq .gt_spanner_row {
   border-bottom-style: hidden;
 }
 
-#ftdxiydrlk .gt_group_heading {
+#brcxiwflyq .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -618,7 +618,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   text-align: left;
 }
 
-#ftdxiydrlk .gt_empty_group_heading {
+#brcxiwflyq .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -633,15 +633,15 @@ Convocatoria Interna - Investigación Avanzada · 2025
   vertical-align: middle;
 }
 
-#ftdxiydrlk .gt_from_md > :first-child {
+#brcxiwflyq .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#ftdxiydrlk .gt_from_md > :last-child {
+#brcxiwflyq .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#ftdxiydrlk .gt_row {
+#brcxiwflyq .gt_row {
   padding-top: 2px;
   padding-bottom: 2px;
   padding-left: 5px;
@@ -660,7 +660,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   overflow-x: hidden;
 }
 
-#ftdxiydrlk .gt_stub {
+#brcxiwflyq .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -673,7 +673,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   padding-right: 5px;
 }
 
-#ftdxiydrlk .gt_stub_row_group {
+#brcxiwflyq .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -687,15 +687,15 @@ Convocatoria Interna - Investigación Avanzada · 2025
   vertical-align: top;
 }
 
-#ftdxiydrlk .gt_row_group_first td {
+#brcxiwflyq .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#ftdxiydrlk .gt_row_group_first th {
+#brcxiwflyq .gt_row_group_first th {
   border-top-width: 2px;
 }
 
-#ftdxiydrlk .gt_summary_row {
+#brcxiwflyq .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -705,16 +705,16 @@ Convocatoria Interna - Investigación Avanzada · 2025
   padding-right: 5px;
 }
 
-#ftdxiydrlk .gt_first_summary_row {
+#brcxiwflyq .gt_first_summary_row {
   border-top-style: none;
   border-top-color: #D3D3D3;
 }
 
-#ftdxiydrlk .gt_first_summary_row.thick {
+#brcxiwflyq .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#ftdxiydrlk .gt_last_summary_row {
+#brcxiwflyq .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -724,7 +724,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   border-bottom-color: #D3D3D3;
 }
 
-#ftdxiydrlk .gt_grand_summary_row {
+#brcxiwflyq .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -734,7 +734,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   padding-right: 5px;
 }
 
-#ftdxiydrlk .gt_first_grand_summary_row {
+#brcxiwflyq .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -744,7 +744,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   border-top-color: #D3D3D3;
 }
 
-#ftdxiydrlk .gt_last_grand_summary_row_top {
+#brcxiwflyq .gt_last_grand_summary_row_top {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -754,11 +754,11 @@ Convocatoria Interna - Investigación Avanzada · 2025
   border-bottom-color: #D3D3D3;
 }
 
-#ftdxiydrlk .gt_striped {
+#brcxiwflyq .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#ftdxiydrlk .gt_table_body {
+#brcxiwflyq .gt_table_body {
   border-top-style: none;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -767,7 +767,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   border-bottom-color: #D3D3D3;
 }
 
-#ftdxiydrlk .gt_footnotes {
+#brcxiwflyq .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -781,7 +781,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   border-right-color: #D3D3D3;
 }
 
-#ftdxiydrlk .gt_footnote {
+#brcxiwflyq .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-top: 4px;
@@ -790,7 +790,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   padding-right: 5px;
 }
 
-#ftdxiydrlk .gt_sourcenotes {
+#brcxiwflyq .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -804,7 +804,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   border-right-color: #D3D3D3;
 }
 
-#ftdxiydrlk .gt_sourcenote {
+#brcxiwflyq .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -812,72 +812,72 @@ Convocatoria Interna - Investigación Avanzada · 2025
   padding-right: 5px;
 }
 
-#ftdxiydrlk .gt_left {
+#brcxiwflyq .gt_left {
   text-align: left;
 }
 
-#ftdxiydrlk .gt_center {
+#brcxiwflyq .gt_center {
   text-align: center;
 }
 
-#ftdxiydrlk .gt_right {
+#brcxiwflyq .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#ftdxiydrlk .gt_font_normal {
+#brcxiwflyq .gt_font_normal {
   font-weight: normal;
 }
 
-#ftdxiydrlk .gt_font_bold {
+#brcxiwflyq .gt_font_bold {
   font-weight: bold;
 }
 
-#ftdxiydrlk .gt_font_italic {
+#brcxiwflyq .gt_font_italic {
   font-style: italic;
 }
 
-#ftdxiydrlk .gt_super {
+#brcxiwflyq .gt_super {
   font-size: 65%;
 }
 
-#ftdxiydrlk .gt_footnote_marks {
+#brcxiwflyq .gt_footnote_marks {
   font-size: 75%;
   vertical-align: 0.4em;
   position: initial;
 }
 
-#ftdxiydrlk .gt_asterisk {
+#brcxiwflyq .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#ftdxiydrlk .gt_indent_1 {
+#brcxiwflyq .gt_indent_1 {
   text-indent: 5px;
 }
 
-#ftdxiydrlk .gt_indent_2 {
+#brcxiwflyq .gt_indent_2 {
   text-indent: 10px;
 }
 
-#ftdxiydrlk .gt_indent_3 {
+#brcxiwflyq .gt_indent_3 {
   text-indent: 15px;
 }
 
-#ftdxiydrlk .gt_indent_4 {
+#brcxiwflyq .gt_indent_4 {
   text-indent: 20px;
 }
 
-#ftdxiydrlk .gt_indent_5 {
+#brcxiwflyq .gt_indent_5 {
   text-indent: 25px;
 }
 
-#ftdxiydrlk .katex-display {
+#brcxiwflyq .katex-display {
   display: inline-flex !important;
   margin-bottom: 0.75em !important;
 }
 
-#ftdxiydrlk div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
+#brcxiwflyq div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
   height: 0px !important;
 }
 </style>
