Agregar README y licencia

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   <div class="reveal">
     <div class="slides">
 
-<section id="title-slide" data-background-image="/img/bebe2.jpg" data-background-opacity="0.6" data-background-size="contain" class="quarto-title-block center">
+<section id="title-slide" data-background-image="img/bebe2.jpg" data-background-opacity="0.6" data-background-size="contain" class="quarto-title-block center">
   <h1 class="title">Funciones evolutivas del habla dirigida a bebés</h1>
   <p class="subtitle">Impacto en la atención, las preferencias auditivas y el desarrollo lingüístico y musical temprano</p>
 
@@ -432,23 +432,23 @@ Convocatoria Interna - Investigación Avanzada · 2025
 <h2 data-id="quarto-animate-title">Equipo</h2>
 <div class="cell">
 <div class="cell-output-display">
-<div id="brcxiwflyq" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
-<style>#brcxiwflyq table {
+<div id="lxrsocdegv" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<style>#lxrsocdegv table {
   font-family: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-#brcxiwflyq thead, #brcxiwflyq tbody, #brcxiwflyq tfoot, #brcxiwflyq tr, #brcxiwflyq td, #brcxiwflyq th {
+#lxrsocdegv thead, #lxrsocdegv tbody, #lxrsocdegv tfoot, #lxrsocdegv tr, #lxrsocdegv td, #lxrsocdegv th {
   border-style: none;
 }
 
-#brcxiwflyq p {
+#lxrsocdegv p {
   margin: 0;
   padding: 0;
 }
 
-#brcxiwflyq .gt_table {
+#lxrsocdegv .gt_table {
   display: table;
   border-collapse: collapse;
   line-height: normal;
@@ -474,12 +474,12 @@ Convocatoria Interna - Investigación Avanzada · 2025
   border-left-color: #D3D3D3;
 }
 
-#brcxiwflyq .gt_caption {
+#lxrsocdegv .gt_caption {
   padding-top: 4px;
   padding-bottom: 4px;
 }
 
-#brcxiwflyq .gt_title {
+#lxrsocdegv .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -491,7 +491,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   border-bottom-width: 0;
 }
 
-#brcxiwflyq .gt_subtitle {
+#lxrsocdegv .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -503,7 +503,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   border-top-width: 0;
 }
 
-#brcxiwflyq .gt_heading {
+#lxrsocdegv .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -515,13 +515,13 @@ Convocatoria Interna - Investigación Avanzada · 2025
   border-right-color: #D3D3D3;
 }
 
-#brcxiwflyq .gt_bottom_border {
+#lxrsocdegv .gt_bottom_border {
   border-bottom-style: none;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#brcxiwflyq .gt_col_headings {
+#lxrsocdegv .gt_col_headings {
   border-top-style: none;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -536,7 +536,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   border-right-color: #D3D3D3;
 }
 
-#brcxiwflyq .gt_col_heading {
+#lxrsocdegv .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 13px;
@@ -556,7 +556,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   overflow-x: hidden;
 }
 
-#brcxiwflyq .gt_column_spanner_outer {
+#lxrsocdegv .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 13px;
@@ -568,15 +568,15 @@ Convocatoria Interna - Investigación Avanzada · 2025
   padding-right: 4px;
 }
 
-#brcxiwflyq .gt_column_spanner_outer:first-child {
+#lxrsocdegv .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#brcxiwflyq .gt_column_spanner_outer:last-child {
+#lxrsocdegv .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#brcxiwflyq .gt_column_spanner {
+#lxrsocdegv .gt_column_spanner {
   border-bottom-style: none;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -588,11 +588,11 @@ Convocatoria Interna - Investigación Avanzada · 2025
   width: 100%;
 }
 
-#brcxiwflyq .gt_spanner_row {
+#lxrsocdegv .gt_spanner_row {
   border-bottom-style: hidden;
 }
 
-#brcxiwflyq .gt_group_heading {
+#lxrsocdegv .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -618,7 +618,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   text-align: left;
 }
 
-#brcxiwflyq .gt_empty_group_heading {
+#lxrsocdegv .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -633,15 +633,15 @@ Convocatoria Interna - Investigación Avanzada · 2025
   vertical-align: middle;
 }
 
-#brcxiwflyq .gt_from_md > :first-child {
+#lxrsocdegv .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#brcxiwflyq .gt_from_md > :last-child {
+#lxrsocdegv .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#brcxiwflyq .gt_row {
+#lxrsocdegv .gt_row {
   padding-top: 2px;
   padding-bottom: 2px;
   padding-left: 5px;
@@ -660,7 +660,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   overflow-x: hidden;
 }
 
-#brcxiwflyq .gt_stub {
+#lxrsocdegv .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -673,7 +673,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   padding-right: 5px;
 }
 
-#brcxiwflyq .gt_stub_row_group {
+#lxrsocdegv .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -687,15 +687,15 @@ Convocatoria Interna - Investigación Avanzada · 2025
   vertical-align: top;
 }
 
-#brcxiwflyq .gt_row_group_first td {
+#lxrsocdegv .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#brcxiwflyq .gt_row_group_first th {
+#lxrsocdegv .gt_row_group_first th {
   border-top-width: 2px;
 }
 
-#brcxiwflyq .gt_summary_row {
+#lxrsocdegv .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -705,16 +705,16 @@ Convocatoria Interna - Investigación Avanzada · 2025
   padding-right: 5px;
 }
 
-#brcxiwflyq .gt_first_summary_row {
+#lxrsocdegv .gt_first_summary_row {
   border-top-style: none;
   border-top-color: #D3D3D3;
 }
 
-#brcxiwflyq .gt_first_summary_row.thick {
+#lxrsocdegv .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#brcxiwflyq .gt_last_summary_row {
+#lxrsocdegv .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -724,7 +724,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   border-bottom-color: #D3D3D3;
 }
 
-#brcxiwflyq .gt_grand_summary_row {
+#lxrsocdegv .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -734,7 +734,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   padding-right: 5px;
 }
 
-#brcxiwflyq .gt_first_grand_summary_row {
+#lxrsocdegv .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -744,7 +744,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   border-top-color: #D3D3D3;
 }
 
-#brcxiwflyq .gt_last_grand_summary_row_top {
+#lxrsocdegv .gt_last_grand_summary_row_top {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -754,11 +754,11 @@ Convocatoria Interna - Investigación Avanzada · 2025
   border-bottom-color: #D3D3D3;
 }
 
-#brcxiwflyq .gt_striped {
+#lxrsocdegv .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#brcxiwflyq .gt_table_body {
+#lxrsocdegv .gt_table_body {
   border-top-style: none;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -767,7 +767,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   border-bottom-color: #D3D3D3;
 }
 
-#brcxiwflyq .gt_footnotes {
+#lxrsocdegv .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -781,7 +781,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   border-right-color: #D3D3D3;
 }
 
-#brcxiwflyq .gt_footnote {
+#lxrsocdegv .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-top: 4px;
@@ -790,7 +790,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   padding-right: 5px;
 }
 
-#brcxiwflyq .gt_sourcenotes {
+#lxrsocdegv .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -804,7 +804,7 @@ Convocatoria Interna - Investigación Avanzada · 2025
   border-right-color: #D3D3D3;
 }
 
-#brcxiwflyq .gt_sourcenote {
+#lxrsocdegv .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -812,72 +812,72 @@ Convocatoria Interna - Investigación Avanzada · 2025
   padding-right: 5px;
 }
 
-#brcxiwflyq .gt_left {
+#lxrsocdegv .gt_left {
   text-align: left;
 }
 
-#brcxiwflyq .gt_center {
+#lxrsocdegv .gt_center {
   text-align: center;
 }
 
-#brcxiwflyq .gt_right {
+#lxrsocdegv .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#brcxiwflyq .gt_font_normal {
+#lxrsocdegv .gt_font_normal {
   font-weight: normal;
 }
 
-#brcxiwflyq .gt_font_bold {
+#lxrsocdegv .gt_font_bold {
   font-weight: bold;
 }
 
-#brcxiwflyq .gt_font_italic {
+#lxrsocdegv .gt_font_italic {
   font-style: italic;
 }
 
-#brcxiwflyq .gt_super {
+#lxrsocdegv .gt_super {
   font-size: 65%;
 }
 
-#brcxiwflyq .gt_footnote_marks {
+#lxrsocdegv .gt_footnote_marks {
   font-size: 75%;
   vertical-align: 0.4em;
   position: initial;
 }
 
-#brcxiwflyq .gt_asterisk {
+#lxrsocdegv .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#brcxiwflyq .gt_indent_1 {
+#lxrsocdegv .gt_indent_1 {
   text-indent: 5px;
 }
 
-#brcxiwflyq .gt_indent_2 {
+#lxrsocdegv .gt_indent_2 {
   text-indent: 10px;
 }
 
-#brcxiwflyq .gt_indent_3 {
+#lxrsocdegv .gt_indent_3 {
   text-indent: 15px;
 }
 
-#brcxiwflyq .gt_indent_4 {
+#lxrsocdegv .gt_indent_4 {
   text-indent: 20px;
 }
 
-#brcxiwflyq .gt_indent_5 {
+#lxrsocdegv .gt_indent_5 {
   text-indent: 25px;
 }
 
-#brcxiwflyq .katex-display {
+#lxrsocdegv .katex-display {
   display: inline-flex !important;
   margin-bottom: 0.75em !important;
 }
 
-#brcxiwflyq div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
+#lxrsocdegv div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
   height: 0px !important;
 }
 </style>
